--- a/index.html
+++ b/index.html
@@ -209,6 +209,27 @@
     </div>
 
     <!-- Firebase SDK Imports and Logic -->
+   // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyCoSPjQNhQHnNOrumwONflcUk5A81TvARw",
+  authDomain: "job-management-system-39f0c.firebaseapp.com",
+  projectId: "job-management-system-39f0c",
+  storageBucket: "job-management-system-39f0c.firebasestorage.app",
+  messagingSenderId: "1098750622884",
+  appId: "1:1098750622884:web:98d03c3dc68839122dfa31",
+  measurementId: "G-DNDSR7QQDZ"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
         import { getAuth, signInAnonymously, signInWithCustomToken, onAuthStateChanged, createUserWithEmailAndPassword, signInWithEmailAndPassword, signOut } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
